# til24-cv-trainer

./: .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/hooks/: postCreate.sh
notebooks/: data.ipynb  export.py  play.ipynb  train.sh  trainv1.yaml  trainv2.sh  trainv2.yaml  trainv3.yaml  trainv4.yaml  upload.sh  zero_eval_base.sh
tilcvtrainer/: __init__.py  jsonl_importer.py
